build: Fix pylint and pep8 invocations for Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ script:
   - python setup.py test
   - python setup.py check
   - python setup.py pep8
-  - pylint --errors-only
+  - pylint --errors-only dbusapi
+  - pylint --errors-only dbusdeviation
