build: Install pylint as a dependency for Travis-CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "pypy"
 # command to install dependencies
 install:
-  - pip install .
+  - pip install pylint .
 # command to run tests
 script:
   - python setup.py test
