build: Disable Travis-CI build on Python 3.2
Seems the logilab package is broken on Travis’ 3.2 build slave. See:
https://travis-ci.org/pwithnall/dbus-deviation/jobs/60500460.

    $ pylint --errors-only dbusdeviation
    Traceback (most recent call last):
      File "/home/travis/virtualenv/python3.2.5/bin/pylint",
      line 11, in <module>
        sys.exit(run_pylint())
      …
      File "…/site-packages/logilab/common/textutils.py",
      line 59
        u'\xa1': u'!',    # INVERTED EXCLAMATION MARK
              ^
    SyntaxError: invalid syntax
    The command "pylint --errors-only dbusdeviation" exited with 1.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: python
 python:
   - "2.7"
-  - "3.2"
   - "3.3"
   - "3.4"
   - "nightly"
   - "pypy"
+# Disabled due to bugs in the logilab package on the Python 3.2 build slave.
+# See: https://travis-ci.org/pwithnall/dbus-deviation/jobs/60500460
+#  - "3.2"
 # command to install dependencies
 install:
   - pip install pylint .
