--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,11 @@ python:
 #  - "3.2"
 # command to install dependencies
 install:
-  - pip install pylint .
+  - pip install pylint coverage .
 # command to run tests
 script:
-  - python setup.py test
+  - coverage run --source dbusapi,dbusdeviation setup.py test
+  - coverage report --fail-under=70
   - python setup.py check
   - python setup.py pep8
   - pylint --errors-only dbusapi
