--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
   - pylint --errors-only dbusdeviation
 # Submit coverage data to coveralls.io and codecov.io
 after_success:
-    coveralls
-    codecov
+  - coveralls
+  - codecov
