Remove idiotic conflict in pep257
https://github.com/landscapeio/prospector/issues/155

--- a/.landscape.yaml
+++ b/.landscape.yaml
@@ -3,6 +3,10 @@ test-warnings: false
 strictness: veryhigh
 pep8:
     full: true
+pep257:
+    disable:
+      - D211
+      - D400
 ignore-paths:
   - docs/conf.py
   - setup.py
